--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/shoplworks;MODE=MySQL
+    url: jdbc:h2:~/spring;MODE=MySQL
     username: sa
     password:
   h2:
@@ -15,6 +15,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: false
-        format_sql: false
+        show_sql: true
+        format_sql: true
     defer-datasource-initialization: true
